deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iframe-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iframe-test
  template:
    metadata:
      labels:
        app: iframe-test
    spec:
      containers:
      - name: iframe-test
        image: asia-south2-docker.pkg.dev/stage-4t5/platform/iframe-test:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: iframe-test
spec:
  selector:
    app: iframe-test
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
